minor styling fix on mobile

--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -2,11 +2,6 @@
     General
 *************************************************/
 
-html {
-    margin-right: calc(-1 * (100vw - 100%));
-    overflow-x: hidden;
-}
-
 body {
     font-family: 'Nunito', sans-serif;
 }
@@ -154,3 +149,11 @@ h1, h2, h3, h4, h5, h6, p {
         padding:30px;
     }
 }
+
+@media (min-width: 767px) {
+    html {
+        margin-right: calc(-1 * (100vw - 100%));
+        overflow-x: hidden;
+    }
+}
+
